--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-Site Metas -->
     <title>CREAI 2023 | Workshop on Artificial Intelligence and Creativity</title>
     <meta name="keywords" content="Artificial Intelligence, Aesthetic Computing, Robotic Arts, Creative Systems">
-    <meta name="description" content="CREAI 2023 - Workshop on Workshop on Artificial Intelligence and Creativity">
+    <meta name="description" content="CREAI 2023 - Workshop on Artificial Intelligence and Creativity">
     <meta name="author" content="Allegra De Filippo">
 
     <!-Site Icons -->
@@ -184,8 +184,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1 class="m-b-20"><strong>CREAI 2022 </strong></h1>
-                            <p class="m-b-40"><strong>First Workshop on Artificial Intelligence and Creativity | co-located with AI*IA 2022</strong></p>
+                            <h1 class="m-b-20"><strong>CREAI 2023 </strong></h1>
+                            <p class="m-b-40"><strong>Second Workshop on Artificial Intelligence and Creativity | co-located with AI*IA 2023</strong></p>
                         </div>
                     </div>
                 </div>
@@ -195,8 +195,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h1 class="m-b-20"><strong>CREAI 2022 </strong></h1>
-                            <p class="m-b-40"><strong>First Workshop on Artificial Intelligence and Creativity | co-located with AI*IA 2022</strong></p>
+                            <h1 class="m-b-20"><strong>CREAI 2023 </strong></h1>
+                            <p class="m-b-40"><strong>Second Workshop on Artificial Intelligence and Creativity | co-located with AI*IA 2023</strong></p>
                     </div>
                 </div>
             </li>
@@ -205,8 +205,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-							<h1 class="m-b-20"><strong>CREAI 2022 </strong></h1>
-                            <p class="m-b-40">First Workshop on Artificial Intelligence and Creativity | co-located with AI*IA 2022</p></div></div>
+							<h1 class="m-b-20"><strong>CREAI 2023 </strong></h1>
+                            <p class="m-b-40">Second Workshop on Artificial Intelligence and Creativity | co-located with AI*IA 2023</p></div></div>
                     </div>
                 </div>
             </li>
@@ -300,10 +300,10 @@
 				<div class="row">
 					<div class="col-lg-5 col-md-12 col-sm-12">
 						<div class="footer-top-box">
-							<a href="https://aixia2022.uniud.it"><h3>co-located with AI*IA 2022</h3></a>
+							<a href="https://aixia2022.uniud.it"><h3>co-located with AI*IA 2023</h3></a>
 							<ul class="list-time">
-								<li>The 21st International Conference of the Italian Association for Artificial Intelligence
-</li> <li><br> Udine (Italy), November 28-December 2, 2022 </li>
+								<li>The 22st International Conference of the Italian Association for Artificial Intelligence
+</li> <li><br> Roma (Italy), November 15-17, 2023 </li>
               </ul>
             </div>
 					</div>
