--- a/motivation.html
+++ b/motivation.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-Site Metas -->
-    <title>CREAI 2022 | Workshop on Artificial Intelligence and Creativity</title>
+    <title>CREAI 2023 | Workshop on Artificial Intelligence and Creativity</title>
     <meta name="keywords" content="Artificial Intelligence, Aesthetic Computing, Robotic Arts, Creative Systems">
-    <meta name="description" content="CREAI 2022 - Workshop on Artificial Intelligence and Creativity">
+    <meta name="description" content="CREAI 2023 - Workshop on Artificial Intelligence and Creativity">
     <meta name="author" content="Allegra De Filippo">
 
 
@@ -191,10 +191,10 @@ This workshop aims to collect and bridge the gap among technologies and most rec
 				<div class="row">
 					<div class="col-lg-5 col-md-12 col-sm-12">
 						<div class="footer-top-box">
-							<a href="https://aixia2022.uniud.it"><h3>co-located with AI*IA 2022</h3></a>
+							<a href="http://www.aixia2023.cnr.it/"><h3>co-located with AI*IA 2023</h3></a>
 							<ul class="list-time">
-								<li>The 21st International Conference of the Italian Association for Artificial Intelligence
-</li> <li><br> Udine (Italy), November 28-December 2, 2022 </li>
+								<li>The 22st International Conference of the Italian Association for Artificial Intelligence
+</li> <li><br> Roma (Italy), November 6-9, 2022 </li>
               </ul>
             </div>
 					</div>
