--- a/call.html
+++ b/call.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-Site Metas -->
-    <title>CREAI 2022 | Italian Workshop on Artificial Intelligence and Creativity</title>
+    <title>CREAI 2023 | Workshop on Artificial Intelligence and Creativity</title>
     <meta name="keywords" content="Artificial Intelligence, Aesthetic Computing, Robotic Arts, Creative Systems">
-    <meta name="description" content="CREAI 2022 - Workshop on Workshop on Artificial Intelligence and Creativity">
+    <meta name="description" content="CREAI 2023 - Workshop on Artificial Intelligence and Creativity">
     <meta name="author" content="Allegra De Filippo">
 
     <!-Site Icons -->
@@ -185,11 +185,11 @@
                     Submissions should be single blinded, i.e. authors names should be included in the submissions. Submissions must be made through the EasyChair conference system prior the specified deadline (all deadlines refer to GMT) by selecting CREAI as submission track. Discussion papers are extended abstracts that present your favourite recent application work (published elsewhere), position, or open problems with clear and concise formulations of current challenges. <b>At least one of the authors should register and take part at the conference to make the presentation.</b></p>
                                           <br><p style='text-align:justify;color:black;'><strong>Important Dates</strong><br>
 					  
-                      * Paper submission deadline: <del>October 7th, 2022</del> <b>October 17th, 2022</b><br>
+                      * Paper submission deadline: <!-- <del>October 7th, 2022</del> --> <b>September 8th, 2023</b><br>
 
-                      * Notification to authors: <b>November 3th, 2022</b><br>
+                      * Notification to authors: <b>October 6th, 2023</b><br>
 
-                      * Camera-Ready submission: <b>November 10th, 2022</b><br>
+                      * Camera-Ready submission: <b>October 13th, 2023</b><br>
 					  <br>
 
                     </p>
@@ -212,10 +212,10 @@
 				<div class="row">
 					<div class="col-lg-5 col-md-12 col-sm-12">
 						<div class="footer-top-box">
-							<a href="https://aixia2022.uniud.it/"><h3>co-located with AI*IA 2022</h3></a>
+							<a href="http://www.aixia2023.cnr.it/"><h3>co-located with AI*IA 2023</h3></a>
 							<ul class="list-time">
-								<li>The 21st International Conference of the Italian Association for Artificial Intelligence
-</li> <li><br> Udine (Italy), November 28-December 2, 2022 </li>
+								<li>The 22st International Conference of the Italian Association for Artificial Intelligence
+</li> <li><br> Roma (Italy), November 6-9, 2023 </li>
               </ul>
             </div>
 					</div>
