--- a/organizers.html
+++ b/organizers.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-Site Metas -->
-    <title>CREAI 2022 | Workshop on Artificial Intelligence and Creativity</title>
+    <title>CREAI 2023 | Workshop on Artificial Intelligence and Creativity</title>
     <meta name="keywords" content="Artificial Intelligence, Aesthetic Computing, Robotic Arts, Creative Systems">
-    <meta name="description" content="CREAI 2022 - Workshop on Workshop on Artificial Intelligence and Creativity">
+    <meta name="description" content="CREAI 2023 - Workshop on Artificial Intelligence and Creativity">
     <meta name="author" content="Allegra De Filippo">
 
     <!-Site Icons -->
@@ -167,7 +167,7 @@
 
                     <p style="text-align: justify; color :black;list-style: disc;">
                       <ul id ="org">
-                        <li style="list-style: disc;"><b>Allegra De Filippo (main contact)</b> – PostDoc Research Fellow - University of Bologna, Italy  (main contact)<br>
+                        <li style="list-style: disc;"><b>Allegra De Filippo (main contact)</b> – Junior assistant professor - University of Bologna, Italy  (main contact)<br>
                           E-mail:<span style="color:blue;"> allegra.defilippo@unibo.it </span>- homepage: <a href="https://www.unibo.it/sitoweb/allegra.defilippo" style="color:blue;">https://www.unibo.it/sitoweb/allegra.defilippo</a>
                           </li><br>
                         <li style="list-style: disc;"><b>Michela Milano</b> – Full Professor and Head of Centro Interdipartimentale Alma Mater Research Institute for Human-Centered Artificial Intelligence - University of Bologna, Italy<br>
@@ -198,10 +198,10 @@
 				<div class="row">
 					<div class="col-lg-5 col-md-12 col-sm-12">
 						<div class="footer-top-box">
-							<a href="https://aixia2022.uniud.it"><h3>co-located with AI*IA 2022</h3></a>
+							<a href="http://www.aixia2023.cnr.it/t"><h3>co-located with AI*IA 2023</h3></a>
 							<ul class="list-time">
-								<li>The 21st International Conference of the Italian Association for Artificial Intelligence
-</li> <li><br> Udine (Italy), November 28-December 2, 2022 </li>
+								<li>The 22st International Conference of the Italian Association for Artificial Intelligence
+</li> <li><br> Roma (Italy), November 6-9, 2023 </li>
               </ul>
             </div>
 					</div>
