--- a/papers.html
+++ b/papers.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-Site Metas -->
-    <title>CREAI 2022 | Workshop on Artificial Intelligence and Creativity</title>
+    <title>CREAI 2023 | Workshop on Artificial Intelligence and Creativity</title>
     <meta name="keywords" content="Artificial Intelligence, Aesthetic Computing, Robotic Arts, Creative Systems">
-    <meta name="description" content="CREAI 2022 - Workshop on Workshop on Artificial Intelligence and Creativity">
+    <meta name="description" content="CREAI 2023 - Workshop on Artificial Intelligence and Creativity">
     <meta name="author" content="Allegra De Filippo">
 
 
@@ -167,14 +167,14 @@
                     <h2 class="noo-sh-title-top">PROCEEDINGS</span></h2>
 
                     <p style="text-align: justify; color :black">
-					Proceedings of CREAI 2022 will be available on CEUR.ws 
+					Proceedings of CREAI 2023 TBA <!-- will be available on CEUR.ws 
 					<a style="text-align: justify; color :black" href="https://ceur-ws.org/Vol-3278/"><h3>Go To The Proceedings</h3></a>
 					</p>
 					<!--p style="text-align: justify; color :black"> To Be Prepared
-					</p-->
+					</p--> -->
 
                 </div>
-			
+		<!--
                 <div class="col-lg-12">
                     <h2 class="noo-sh-title-top">Accepted Papers</span></h2>
 
@@ -192,7 +192,7 @@
                     </p>
 					<p style="text-align: justify; color :black">
 					</p>
-                </div>
+                </div> -->
             </div>
 
         </div>
