--- a/program.html
+++ b/program.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-Site Metas -->
-    <title>CREAI 2022 | Workshop on Artificial Intelligence and Creativity</title>
+    <title>CREAI 2023 | Workshop on Artificial Intelligence and Creativity</title>
     <meta name="keywords" content="Artificial Intelligence, Aesthetic Computing, Robotic Arts, Creative Systems">
-    <meta name="description" content="CREAI 2022 - Workshop on Workshop on Artificial Intelligence and Creativity">
+    <meta name="description" content="CREAI 2023 - Workshop on Artificial Intelligence and Creativity">
     <meta name="author" content="Allegra De Filippo">
 
     <!-Site Icons -->
@@ -163,13 +163,13 @@
             <div class="row">
 
 				<div class="col-lg-12">
-                    <h2 class="noo-sh-title-top">Workshop Day: November 29th, 2022</span></h2>
+                    <h2 class="noo-sh-title-top">Workshop Program TBA <!-- Day: November 29th, 2022--> </span></h2>
 
 					<!--<p style="text-align: justify; color :black">
                     Proceedings of XAI.it are now available on CEUR.ws (volume ) <a style="text-align: justify; color :black" href="http://ceur-ws.org/"><h3>Go To The Proceedings</h3></a>
                     </p>
                 </div>!-->
-	
+	<!--
 				<div class="col-lg-12">
                     <h2 class="noo-sh-title-top">Invited Talk</span></h2>
 					<p style="text-align: justify; color :black">
@@ -232,7 +232,7 @@ François is also a guitarist, and composed and published several albums. His la
 					  
 	    </ul>
                     </p>				
-                </div>
+                </div> -->
             </div>	
         </div>
     </div>
