--- a/pc-member.html
+++ b/pc-member.html
@@ -165,35 +165,31 @@
 
                 <div class="col-lg-12">
                     <h2 class="noo-sh-title-top">PC Members (To Be Confirmed)</span></h2>
-<!--
+
                     <p style="text-align: justify; color :black">
                       <ul>
+			<li>Fabrizio Balducci, University of Bari, Italy</li>
 			<li>Mattia Barbaresi, University of Bologna, Italy</li>
                         <li>Pierpaolo Basile, University of Bari, Italy</li>
 			<li>Andrea Borghesi, University of Bologna, Italy</li>
 			<li>Roberta Calegari, University of Bologna, Italy</li>
-			<li>Filippo Carnovalini, University of Padova, Italy</li>
-			<li>Matteo Casari, University of Bologna, Italy</li>
-			<li>Luca Casini, University of Bologna, Italy</li>
 			<li>Federica Cena, University of Torino, Italy</li>
 			<li>Antonio Chella, University of Palermo, Italy</li>
 			<li>Giovanni Emanuele Corazza, University of Bologna, Italy</li>
 			<li>Marco de Gemmis, University of Bari, Italy</li>
 			<li>Aldo Gangemi, University of Bologna, Italy</li>
+			<li>Luca Giuliani, University of Bologna, Italy</li>
 			<li>Antonio Lieto, University of Torino, Italy</li>
-			<li>Francesca Alessandra Lisi, University of Bari, Italy</li>
 			<li>Paola Mello, University of Bologna, Italy</li>
 			<li>Mirco Musolesi, University of Bologna, Italy</li>
 			<li>Cataldo Musto, University of Bari, Italy</li>
 			<li>Antonio Roda, University of Padova, Italy</li>
                         <li>Andrea Roli, University of Bologna, Italy</li>
-			<li>Silvia Rossi, University of Napoli, Italy</li>
-			<li>Antonio Sgorbissa, University of Genova, Italy</li>
-			<li>Alessia Tessari, University of Bologna, Italy</li>
+			<li>Fabio Tamburini, University of Bologna, Italy</li>
 			<li>Gennaro Vessio, University of Bari, Italy</li>
 					 </ul>
                     </p>
--->
+
                 </div>
             </div>
 			
