--- a/program.html
+++ b/program.html
@@ -163,35 +163,43 @@
             <div class="row">
 
 				<div class="col-lg-12">
-                    <h2 class="noo-sh-title-top">Workshop Program TBA <!-- Day: November 29th, 2022--> </span></h2>
+                    <h2 class="noo-sh-title-top">Workshop Program Day: November 6th, 2023--> </span></h2>
 
 					<!--<p style="text-align: justify; color :black">
                     Proceedings of XAI.it are now available on CEUR.ws (volume ) <a style="text-align: justify; color :black" href="http://ceur-ws.org/"><h3>Go To The Proceedings</h3></a>
-                    </p>
-                </div>!-->
-	<!--
+                    </p> -->
+                </div>
+	
 				<div class="col-lg-12">
                     <h2 class="noo-sh-title-top">Invited Talk</span></h2>
 					<p style="text-align: justify; color :black">
                       <ul>
-						<li><b>When: </b>November 29th, h.10.00</li>
-						<li><b>Speaker: </b> <a href="https://www.francoispachet.fr/"><font color="black" font-size="1em">Fran&ccedilois Pachet</font></a>, Director of the Spotify Creator Technology Research Lab</li>
-						<li><b>Title: </b> AI-Assisted Music Creation: is the problem solved?</li>
+						<li><b>When: </b>November 6th, h.--.--</li>
+						<li><b>Speaker: </b> <a href="http://markotkalcic.com/"><font color="black" font-size="1em">Marko Tkalcic</font></a>, professor at the Faculty of Mathematics, Natural Sciences and Information Technologies (FAMNIT) at the University of Primorska in Koper, Slovenia</li>
+						<li><b>Title: </b> Towards Computational Psychology for Creativity</li>
 						<br>
-						<li><b>Abstract: </b>Reflecting on over 10 years of research on AI-assisted music creation, this talk will highlight the most interesting results achieved so far, and describe novel issues related to the attempt of shifting from proof-of-concepts in the lab to actual tools for musicians. 
-							The talk will raise the question "is the AI music generation problem solved?", and propose a new series of problems arising from the very success of current technological approaches.</li>
+						<li><b>Abstract: </b>As AI is showing more and more capabilities of creativity without the human in the loop, AI can also be used to support human creativity. Creativity in humans has been found related to affective processes and personality traits. In this talk I will present AI models that are able to predict emotions and personality traits from digital footprints of users. From tweets to personality traits, from webcam streams to emotions. Furthermore, I will lay out a framework for future research on using AI to predict creativity-related psychological constructs.</li>
 						<br>
-						<li><b>Bio: </b>Fran&ccedilois Pachet is director of the Spotify Creator Technology Research Lab, where he designs the next generation of AI-based tools for musicians.
-							With the label Flow Records he released Hello World, the first music album composed with artificial intelligence. 
-This album is the result of the collaboration between AI, Benoit Carré aka SKYGGE and many other musicians.
-Prior to Spotify, François Pachet has been director of the SONY Computer Science Laboratory Paris. At SONY he set up a music research working on interactive music listening, composition and performance. 
-There he conducted the ERC-funded Flow Machines project during which he developped technologies for style imitation under user constraints. This project produced the first mainstream music title: “Daddy’s car”.
-François is also a guitarist, and composed and published several albums. His latest book Histoire d’une oreille is an augmented book about how a musical ear develops through music listening.</li>
+						<li><b>Bio: </b>Marko Tkalcic is associate professor at the Faculty of Mathematics, Natural Sciences and Information Technologies (FAMNIT) at the University of Primorska in Koper, Slovenia. He aims at improving personalized services (e.g. recommender systems) through the usage of psychological models in personalization algorithms. To achieve this, he uses diverse research methodologies, including data mining, machine learning, and user studies.</li>
+					  </ul>
+					</p>
+                </div>
+		    <div class="col-lg-12">
+                    <h2 class="noo-sh-title-top">Invited Talk</span></h2>
+					<p style="text-align: justify; color :black">
+                      <ul>
+						<li><b>When: </b>November 6th, h.--.--</li>
+						<li><b>Speaker: </b> <a href="https://www.ondealte.com/chi-siamo/"><font color="black" font-size="1em">Giuseppe Folonari</font></a>, partner at Onde Alte</li>
+						<li><b>Title: </b> Our perspective on AI, Creativity, Innovation & Social Impact</li>
+						<br>
+						<li><b>Abstract: </b>Onde Alte is a social impact lab and certified B-Corp, we use the tools of design & technology to create a positive outcome for our society and the planet. The talk will explore our experience in using Artificial Intelligence for education, innovation and creativity, reviewing some of the tools we use and discussing the potential as well as the cautionary notes of this transformative technology.</li>
+						<br>
+						<li><b>Bio: </b> Giuseppe is a partner at Onde Alte, a design studio (and proud B-Corp) focused on social impact. In the past he worked for various angel groups in Italy and Hong Kong, designed and managed the first accelerator program in Italy (while at H-FARM), and launched and led the Venture Building team at AKQA. He is passionate about open innovation and impact entrepreneurship, and make angel investments in startups enabling global freedom of movement.</li>
 					  </ul>
 					</p>
                 </div>
 	
-                <div class="col-lg-12">
+                <!-- <div class="col-lg-12">
                     <h2 class="noo-sh-title-top">Program</span></h2>
 
                     <p style="text-align: justify; color :black">
