--- a/program.html
+++ b/program.html
@@ -253,10 +253,10 @@
 				<div class="row">
 					<div class="col-lg-5 col-md-12 col-sm-12">
 						<div class="footer-top-box">
-							<a href="https://aixia2022.uniud.it"><h3>co-located with AI*IA 2022</h3></a>
+							<a href="http://www.aixia2023.cnr.it"><h3>co-located with AI*IA 2023</h3></a>
 							<ul class="list-time">
 								<li>The 21st International Conference of the Italian Association for Artificial Intelligence
-</li> <li><br> Udine (Italy), November 28-December 2, 2022 </li>
+</li> <li><br> Rome (Italy), November 6-9, 2023 </li>
               </ul>
             </div>
 					</div>
