--- a/program.html
+++ b/program.html
@@ -163,7 +163,7 @@
             <div class="row">
 
 				<div class="col-lg-12">
-                    <h2 class="noo-sh-title-top">Workshop Program Day: November 6th, 2023--> </span></h2>
+                    <h2 class="noo-sh-title-top">Workshop Program Day: November 6th, 2023 </span></h2>
 
 					<!--<p style="text-align: justify; color :black">
                     Proceedings of XAI.it are now available on CEUR.ws (volume ) <a style="text-align: justify; color :black" href="http://ceur-ws.org/"><h3>Go To The Proceedings</h3></a>
@@ -171,7 +171,7 @@
                 </div>
 	
 				<div class="col-lg-12">
-                    <h2 class="noo-sh-title-top">Invited Talk</span></h2>
+                    <h2 class="noo-sh-title-top">Invited Talk I </span></h2>
 					<p style="text-align: justify; color :black">
                       <ul>
 						<li><b>When: </b>November 6th, h.--.--</li>
@@ -185,7 +185,7 @@
 					</p>
                 </div>
 		    <div class="col-lg-12">
-                    <h2 class="noo-sh-title-top">Invited Talk</span></h2>
+                    <h2 class="noo-sh-title-top">Invited Talk II</span></h2>
 					<p style="text-align: justify; color :black">
                       <ul>
 						<li><b>When: </b>November 6th, h.--.--</li>
