--- a/program.html
+++ b/program.html
@@ -163,7 +163,7 @@
             <div class="row">
 
 				<div class="col-lg-12">
-                    <h2 class="noo-sh-title-top">Workshop Program Day: November 6th, 2023 </span></h2>
+                    <h2 class="noo-sh-title-top">Workshop Program Day: November 6th, 2023 h. 14:00-18:00</span></h2>
 
 					<!--<p style="text-align: justify; color :black">
                     Proceedings of XAI.it are now available on CEUR.ws (volume ) <a style="text-align: justify; color :black" href="http://ceur-ws.org/"><h3>Go To The Proceedings</h3></a>
@@ -174,7 +174,7 @@
                     <h2 class="noo-sh-title-top">Invited Talk I </span></h2>
 					<p style="text-align: justify; color :black">
                       <ul>
-						<li><b>When: </b>November 6th, h.--.--</li>
+						<li><b>When: </b>November 6th, h.14.15</li>
 						<li><b>Speaker: </b> <a href="http://markotkalcic.com/"><font color="black" font-size="1em">Marko Tkalcic</font></a>, professor at the Faculty of Mathematics, Natural Sciences and Information Technologies (FAMNIT) at the University of Primorska in Koper, Slovenia</li>
 						<li><b>Title: </b> Towards Computational Psychology for Creativity</li>
 						<br>
@@ -188,7 +188,7 @@
                     <h2 class="noo-sh-title-top">Invited Talk II</span></h2>
 					<p style="text-align: justify; color :black">
                       <ul>
-						<li><b>When: </b>November 6th, h.--.--</li>
+						<li><b>When: </b>November 6th, h.16.30</li>
 						<li><b>Speaker: </b> <a href="https://www.ondealte.com/chi-siamo/"><font color="black" font-size="1em">Giuseppe Folonari</font></a>, partner at Onde Alte</li>
 						<li><b>Title: </b> Our perspective on AI, Creativity, Innovation & Social Impact</li>
 						<br>
