--- a/papers.html
+++ b/papers.html
@@ -174,25 +174,25 @@
 					</p-->
 
                 </div>
-		<!--
+		
                 <div class="col-lg-12">
                     <h2 class="noo-sh-title-top">Accepted Papers</span></h2>
 
                     <p style="text-align: justify; color :black">
                       <ul>
-                        <li>1) Nicolas Lazzari, Andrea Poltronieri and Valentina Presutti - <b>Pitchclass2vec: Symbolic Music Structure Segmentation with Chord Embeddings</b></li><br>
-						<li>2) Mattia Barbaresi and Andrea Roli - <b>Machine improvisation through generalized transition probability graphs</b></li><br>
-                        <li>3) Luca Befera and Livio Bioglio - <b>Classifying Contemporary AI Applications in Intermedia Theatre: Overview and Analysis of Some Cases</b></li><br>
-						<li>4) Ken D&eacuteguernel, Bob L. T. Sturm, Hugo Maruri-Aguilar - <b> Investigating the relationship between liking and belief in AI authorship in the context of Irish traditional music</b></li><br>
-						<li>5) Luca Giuliani, Allegra De Filippo, Andrea Borghesi, Paola Mello and Michela Milano - <b>A Multi-modal Perspective for the Artistic Evaluation of Robotic Dance Performances</b></li><br>
+                        <li>1) Francesco Alfieri, Luigi Asprino, Nicolas Lazzari and Valentina Presutti - <b>Creative influence prediction using graph theory</b></li><br>
+						<li>2) Lorenzo Stacchio, Claudia Scorolli and Gustavo Marfia - <b>Evaluating Human Aesthetic and Emotional Aspects of 3D generated content through eXtended Reality</b></li><br>
+                        <li>3) Chiara Lucifora, Claudia Scorolli and Aldo Gangemi - <b>CREON: a Creative Ontology based on Psychological and Neuroscientific Studies</b></li><br>
+						<li>4) Tommaso Bianco, Giovanna Castellano, Raffaele Scaringi and Gennaro Vessio - <b> Identifying AI-Generated Art with Deep Learning</b></li><br>
+						<li>5) Luca Giuliani, Allegra De Filippo and Andrea Borghesi - <b>Towards Intelligent Music Production: A Sample-based Approach</b></li><br>
 						<li>6) Andrea Roli - <b>Robots, cells and baroque music: Creativity as an emergent phenomenon</b></li><br>
-						<li>7) Maria Mannone, Valeria Seidita and Antonio Chella - <b>Does Creativity Help Us Survive? A Possible Approach with Quantum-Driven Robots</b></li><br>
-						<li>8) Dario Pasquali, Francesco Rea and Alessandra Sciutti - <b>Detecting Lies in the Wild: Creativity and Learning @ the Maker Faire Rome</b></li><br>
+						<li>7) Emanuele Cosenza, Andrea Valenti and Davide Bacciu - <b>Graph-based Polyphonic Multitrack Music Generation</b></li><br>
+			
 				</ul>
                     </p>
 					<p style="text-align: justify; color :black">
 					</p>
-                </div> -->
+                </div> 
             </div>
 
         </div>
