--- a/organizers.html
+++ b/organizers.html
@@ -167,7 +167,7 @@
 
                     <p style="text-align: justify; color :black;list-style: disc;">
                       <ul id ="org">
-                        <li style="list-style: disc;"><b>Allegra De Filippo (main contact)</b> – Junior assistant professor - University of Bologna, Italy  (main contact)<br>
+                        <li style="list-style: disc;"><b>Allegra De Filippo (main contact)</b> – Assistant Professor - University of Bologna, Italy  (main contact)<br>
                           E-mail:<span style="color:blue;"> allegra.defilippo@unibo.it </span>- homepage: <a href="https://www.unibo.it/sitoweb/allegra.defilippo" style="color:blue;">https://www.unibo.it/sitoweb/allegra.defilippo</a>
                           </li><br>
                         <li style="list-style: disc;"><b>Michela Milano</b> – Full Professor and Head of Centro Interdipartimentale Alma Mater Research Institute for Human-Centered Artificial Intelligence - University of Bologna, Italy<br>
