--- a/motivation.html
+++ b/motivation.html
@@ -193,7 +193,7 @@ This workshop aims to collect and bridge the gap among technologies and most rec
 						<div class="footer-top-box">
 							<a href="http://www.aixia2023.cnr.it/"><h3>co-located with AI*IA 2023</h3></a>
 							<ul class="list-time">
-								<li>The 22st International Conference of the Italian Association for Artificial Intelligence
+								<li>The 22nd International Conference of the Italian Association for Artificial Intelligence
 </li> <li><br> Roma (Italy), November 6-9, 2023 </li>
               </ul>
             </div>
