--- a/organizers.html
+++ b/organizers.html
@@ -200,7 +200,7 @@
 						<div class="footer-top-box">
 							<a href="http://www.aixia2023.cnr.it/t"><h3>co-located with AI*IA 2023</h3></a>
 							<ul class="list-time">
-								<li>The 22st International Conference of the Italian Association for Artificial Intelligence
+								<li>The 22nd International Conference of the Italian Association for Artificial Intelligence
 </li> <li><br> Roma (Italy), November 6-9, 2023 </li>
               </ul>
             </div>
